# choicedesign

./: .gitignore  CHANGELOG.txt  README.md  pyproject.toml
choicedesign/: algorithms.py  criteria.py  design.py  expressions.py  utils.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/latex/: choicedesign.aux  choicedesign.fdb_latexmk  choicedesign.fls  choicedesign.idx  choicedesign.ilg  choicedesign.ind  choicedesign.out  choicedesign.tex  choicedesign.toc
examples/: d_efficient_rum_asc.ipynb  d_efficient_rum_avail.ipynb  d_efficient_rum_bayes.ipynb  d_efficient_rum_conds.ipynb  d_efficient_rum_cs_avail.ipynb  d_efficient_rum_dummy.ipynb  d_efficient_rum_optout.ipynb  d_efficient_rum_simple.ipynb  fullfact_simple.ipynb
tests/: test_choicedesign.py
